new resourcepack version